bug-fix z-index

--- a/sass/3-layout/_menu-right.sass
+++ b/sass/3-layout/_menu-right.sass
@@ -11,7 +11,7 @@
   background: $color__main--1
   padding: 2.5rem
   position: fixed
-  z-index: 999
+  z-index: 50
   top: 0
   right: 0
   transition: all .5s ease
